--- a/public_html/css/main/fonts/fonts.css
+++ b/public_html/css/main/fonts/fonts.css
@@ -1,9 +1,9 @@
 /*
 Copyright (c) 2015 by Rafael Angel Aznar Aparici (rafaaznar at gmail dot com)
 
-sisane: The stunning micro-library that helps you to develop easily 
-            AJAX web applications by using Angular.js 1.x & sisane-server
-sisane is distributed under the MIT License (MIT)
+andamio: The stunning micro-library that helps you to develop easily 
+            AJAX web applications by using Angular.js 1.x & andamio-server
+andamio is distributed under the MIT License (MIT)
 Sources at https://github.com/rafaelaznar/
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
